--- a/pratica/projeto_google_glass/index.html
+++ b/pratica/projeto_google_glass/index.html
@@ -9,12 +9,7 @@
 
     </script>
 
-    <style>
-        p {
-            text-align: justify;
-            text-indent: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
 
 </head>
 
@@ -25,56 +20,123 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
-            <img src='_imagens/glass-oculos-preto-peq.png' />
-
-            Menu Principal
-            - Home
-            - Especificações
-            - Fotos
-            - Multimídia
-            - Fale conosco
+            <figure id="icone">
+                <img src='_imagens/glass-oculos-preto-peq.png' />
+                <figcaption>
+                    Google Glass, visão para o futuro.
+                </figcaption>
+            </figure>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
         </header>
+        <section id="corpo">
+            <hgroup>
+                <h3>Tecnologia > Inovações</h3>
+                <h1>Saiba tudo sobre o Google Glass</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3>Atualizado em 23/Abril/2013</h3>
+            </hgroup>
 
-        <hgroup>
-            <h3>Tecnologia > Inovações</h3>
-            <h1>Saiba tudo sobre o Google Glass</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3>Atualizado em 23/Abril/2013</h3>
-        </hgroup>
+            <h2>O que é</h2>
+            <p>O <span style="text-decoration: underline; font-weight: bold;">Google Glass</span> é um acessório em
+                forma de
+                óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também
+                chamado de <a href="https://www.google.com/glass/start/" target="_blank">Project Glass</a>, o eletrônico
+                é
+                capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar
+                vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil.
+                Atualmente o
+                Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo.
+                Além
+                disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o
+                acessório.
+            </p>
+            <figure class="foto-legendada">
+                <img src="_imagens/glass-quadro-homem-mulher.jpg" />
+                <figcaption>
+                    Google Glass é uma nova maneira de ver o mundo
+                </figcaption>
+            </figure>
 
-        <h2>O que é</h2>
-        <p>O <span style= "text-decoration: underline; font-weight: bold;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
-        [AQUI ENTRA UMA FOTO]
+            <h2>Data de lançamento</h2>
+            <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+                disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos,
+                2014.
+            </p>
 
-        <h2>Data de lançamento</h2>
-        <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+            <h2>Especificações Técnicas</h2>
+            <table id="especificacoes">
+                <caption>Técnica do Google Glass Mar/2013</caption>
+                <tr>
+                    <td class="titulo">Tela</td>
+                    <td class="dado">Resolução equivalente a tela de 25"</td>
+                </tr>
+                <tr>
+                    <td rowspan="2"  class="titulo">Camera</td>
+                    <td class="dado">5MP para fotos</td>
+                </tr>
+                <tr>
+                    <td class="dado">720p para vídeos</td>
+                </tr>
+                <tr>
+                    <td rowspan="2"  class="titulo">Conectividade</td>
+                    <td class="dado">Wi-Fi</td>
+                </tr>
+                <tr>
+                    <td class="dado">Bluetooth</td>
+                </tr>
+                <tr>
+                    <td  class="titulo">Memória Interna</td>
+                    <td class="dado">12GB</td>
+                </tr>
+            </table>
 
-        <h2>Especificações Técnicas</h2>
-        <p>Tabela Técnica do Google Glass Mar/2013
-        Tela:Resolução equivalente a tela de 25"
-        Camera: 5MP para fotos / 720p para vídeos
-        Conectividade: Wi-Fi/ Bluetooth
-        Memória Interna: 12GB</p>
+            <h2>Como funciona</h2>
+            <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na
+                parte
+                superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS você pode se situar, assim como
+                selecionar opções com o movimento da cabeça</p>
 
-        <h2>Como funciona</h2>
-        <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
+            <h2>O que você pode fazer com o Google Glasses</h2>
+            <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já
+                que
+                o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado,
+                mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-        <h2>O que você pode fazer com o Google Glasses</h2>
-        <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
+            [AQUI ENTRA UM VÍDEO]
+        </section>
+        <aside id="lateral">
+            <h2>Outras Notícias</h2>
+            <h3>Vídeo mais recente
 
-        [AQUI ENTRA UM VÍDEO]
+                [AQUI ENTRA UM VÍDEO]
 
-        <h2>Outras Notícias</h2>
-        <h3>Vídeo mais recente
+                <h2>Novidades no Glass</h2>
+                <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda
+                    inédita
+                    no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução.
+                    Através
+                    das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em
+                    determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-        [AQUI ENTRA UM VÍDEO]
-
-        <h2>Novidades no Glass</h2>
-        <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
-
-        <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
-        <p>Copyright 2013 - by Gustavo Guanabara</p>
-        <p>Facebook | Twitter</p>
+                <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão
+                    640 x
+                    360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta
+                    definição
+                    colocado a 2,5 metros de distância do espectador.</p>
+        </aside>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara </br>
+                Facebook | Twitter</p>
+        </footer>
     </div>
 </body>
 
