Novas atualizações na página principal e criação da página de especificões

--- a/pratica/projeto_google_glass/specs.html
+++ b/pratica/projeto_google_glass/specs.html
@@ -1,23 +1,50 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang='pt-br'>
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="utf-8">
+    <meta name='viewport' content="width = device-width, initial-scale = 1" />
+    <script>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+    </script>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
+</head>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+            <figure id="icone-specs">
+                <img src="_imagens/especificacoes.png">
+            </figure>
+        </header>
+        <section id="corpo-specs">
+            <h3>Glass > Especificações</h3>
+            <h1>Raio-X no Google Glass</h1>
+            <h2>por Gustavo Guanabara <span id="data">Atualizado em 01/Maio/2013</span></h2>
+            <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass.
+                Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p1>
+            <figure id="info">
+                <img src="_imagens/glass-esquema-marcado.jpg" />
+            </figure>
+        </section>
+        <footer id="rodape">
+            Copyright 2013 - by Gustavo Guanabara Facebook | Twitter
+        </footer>
+    </div>
+</body>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
-
-[AQUI ENTRA UMA IMAGEM]
-
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+</html>
