--- a/pratica/projeto_google_glass/index.html
+++ b/pratica/projeto_google_glass/index.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8" />
     <title>Tudo Sobre Google Glass</title>
     <meta name='viewport' content="width = device-width, initial-scale = 1" />
-    <script>
-
-    </script>
-
     <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
 
 </head>
+<script language="javascript" src="_javascript/funcoes.js">
+</script>
 
 <body>
     <div id='interface'>
@@ -21,7 +19,7 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
             <figure id="icone">
-                <img src='_imagens/glass-oculos-preto-peq.png' />
+                <img src='_imagens/glass-oculos-preto-peq.png' id="foto" />
                 <figcaption>
                     Google Glass, visão para o futuro.
                 </figcaption>
@@ -29,24 +27,35 @@
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="specs.html">Especificações</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="multimidia.html">Multimídia</a></li>
-                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmousemove="mudaIcone('_imagens/home.png')"
+                        onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+                    <li onmousemove="mudaIcone('_imagens/especificacoes-02.png')"
+                        onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a
+                            href="specs.html">Especificações</a></li>
+                    <li onmousemove="mudaIcone('_imagens/fotos.png')"
+                        onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/multimidia.png')"
+                        onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a
+                            href="multimidia.html">Multimídia</a></li>
+                    <li onmousemove="mudaIcone('_imagens/contato.png')"
+                        onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale
+                            conosco</a></li>
                 </ul>
             </nav>
         </header>
         <section id="corpo">
             <article id="noticia-principal">
-                <hgroup>
-                    <h3>Tecnologia > Inovações</h3>
-                    <h1>Saiba tudo sobre o Google Glass</h1>
-                    <h2>por Gustavo Guanabara</h2>
-                    <h3>Atualizado em 23/Abril/2013</h3>
-                </hgroup>
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Tecnologia > Inovações</h3>
+                        <h1>Saiba tudo sobre o Google Glass</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3><span>Atualizado em 23/Abril/2013</span></h3>
+                    </hgroup>
+                </header>
 
-                <h1>O que é</h1>
+                <h2>O que é</h2>
                 <p>O <span style="text-decoration: underline; font-weight: bold;">Google Glass</span> é um acessório em
                     forma de
                     óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada.
@@ -70,14 +79,14 @@
                     </figcaption>
                 </figure>
 
-                <h1>Data de lançamento</h1>
+                <h2>Data de lançamento</h2>
                 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
                     disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo
                     menos,
                     2014.
                 </p>
 
-                <h1>Especificações Técnicas</h1>
+                <h2>Especificações Técnicas</h2>
                 <table id="especificacoes">
                     <caption>Técnica do Google Glass <span>Mar/2013</span></caption>
                     <tr>
@@ -104,7 +113,7 @@
                     </tr>
                 </table>
 
-                <h1>Como funciona</h1>
+                <h2>Como funciona</h2>
                 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED
                     na
                     parte
@@ -125,26 +134,26 @@
             </article>
         </section>
         <aside id="lateral">
-            <h2>Outras Notícias</h2>
-            <h3>Vídeo mais recente
+            <h1>Outras Notícias</h1>
+            <h2>Vídeo mais recente</h2>
 
-                <video>
+            <video>
 
-                </video>
+            </video>
 
-                <h2>Novidades no Glass</h2>
-                <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda
-                    inédita
-                    no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução.
-                    Através
-                    das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em
-                    determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
+            <h2>Novidades no Glass</h2>
+            <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda
+                inédita
+                no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução.
+                Através
+                das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em
+                determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-                <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão
-                    640 x
-                    360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta
-                    definição
-                    colocado a 2,5 metros de distância do espectador.</p>
+            <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão
+                640 x
+                360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta
+                definição
+                colocado a 2,5 metros de distância do espectador.</p>
         </aside>
         <footer id="rodape">
             <p>Copyright 2013 - by Gustavo Guanabara </br>
