--- a/pratica/projeto_google_glass/fale-conosco.html
+++ b/pratica/projeto_google_glass/fale-conosco.html
@@ -1,47 +1,128 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang='pt-br'>
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="utf-8" />
+    <title>Fotos Google Glass</title>
+    <meta name='viewport' content="width = device-width, initial-scale = 1" />
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="_css/menu.css" />
+</head>
+<script language="javascript" src="_javascript/funcoes.js">
+</script>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <div id='interface'>
+        <header id='cabecalho'>
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+            <figure id="icone">
+                <img src='_imagens/contato.png' id="foto" />
+                <figcaption>
+                    Google Glass, visão para o futuro.
+                </figcaption>
+            </figure>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmousemove="mudaIcone('_imagens/home.png')" onmouseout="mudaIcone('_imagens/contato.png')">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/especificacoes.png')"
+                        onmouseout="mudaIcone('_imagens/contato.png')">
+                        <a href="specs.html">Especificações</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/fotos.png')" onmouseout="mudaIcone('_imagens/contato.png')">
+                        <a href="fotos.html">Fotos</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/multimidia.png')"
+                        onmouseout="mudaIcone('_imagens/contato.png')">
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li>
+                        <a href="fale-conosco.html">Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section id="corpo">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <h3>Fale Conosco > Contato</h3>
+                    <h1>Formulário de Contato</h1>
+                    <h2>por Gustavo Guanabara</h2>
+                    <h3><span>Atualizado em 01/Maio/2013</span></h3>
+                </header>
+                <form method="POST" id="fContato" action="">
+                    <fieldset>
+                        <legend id="usuario">Identificação do Usuário</legend>
+                        <p><label for="cNome">Nome:</label><input type="text" name="tNome" id="cNome" size="20" maxlength="40" placeholder="Nome Completo"></p>
+                        <p><label for="cPass">Senha: </label><input type="password" name="tPass" id="cPass" size="20" maxlength="40" placeholder="Senha"></p>
+                        <p><label for="cEmail">E-mail: </label><input type="email" name="tEmail" id="cEmail" size="30" maxlength="50" placeholder="Email"></p>
+                        <fieldset id="sexo"><legend>Sexo</legend>    
+                        <input type="radio" name="tSexo" id="cMasculino"/> <label for="cMasculino">Masculino</label></br>
+                        <input type="radio" name="tSexo" id="cFeminino"/> <label for="cFeminino">Feminino</label>
+                    </fieldset>
+                        <p><label for="cDate">Data de Nascimento: </label><input type="date" name="tDate" id="cDate"></p>
+                    </fieldset>
+                    <fieldset id="endereco">
+                        <legend>Endereço do Usuário</legend>
+                        <p><label for="cLogradouro">Logradouro: </label><input type="text" name="tLogradouro" id="cLogradouro" size="30" maxlength="180" placeholder="Rua, Av., Trav."></p>
+                        <p><label for="cNumero">Número: </label><input type="number" name="tNumero" id="cNumero" sie="10" size="20" min="0" max="999999" placeholder="Número"></p>
+                        <p><label for="cEstado">Estado: </label><select name="tEstado" id="cEstado">
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP" selected>São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                        </select></p>
+                        <p><label for="cCidade">Cidade: </label<input type="text" name="tCidade" id="cCidade" maxlength="70" size="20" placeholder="Sua Cidade"></p>
+                    </fieldset>
+                    <fieldset id="mensagem">
+                        <legend>Mensagem do Usuário</legend>
+                        <p><label for="cUrgencia">Grau de Urgência:</label>Min<input type="range" name="tUrencia" id="cUrgencia" min="0" max="10">Max</p>
+                        <p><label for="cNome">Mensagem: </label><textarea name="tMensagem" id="cMensagem" rows="10" cols="50" maxlength="10000" placeholder="Mensagem" aria-placeholder="Mensagem"></textarea></p>
+                    </fieldset>
+                    <fieldset id="pedido">
+                        <legend>Quero um Google Glass</legend>
+                        Gostaria de adquirir um Google Glass quando disponível
+                        Cor:
+                        Quantidade:
+                        Preço Total: R$
+                    </fieldset>
+                    [BOTÃO ENVIAR]
+                </form>
+            </article>
+        </section>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara</br>
+                Facebook | Twitter</p>
+        </footer>
+    </div>
+</body>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
-
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
-
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
-
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
-
-
-[BOTÃO ENVIAR]
-
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+</html>
