--- a/pratica/projeto_google_glass/fotos.html
+++ b/pratica/projeto_google_glass/fotos.html
@@ -1,29 +1,78 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang='pt-br'>
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="utf-8" />
+    <title>Fotos Google Glass</title>
+    <meta name='viewport' content="width = device-width, initial-scale = 1" />
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="_css/menu.css" />
+    <link rel="stylesheet" type="text/css" href="_css/fotos.css" />
+</head>
+<script language="javascript" src="_javascript/funcoes.js">
+</script>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <div id='interface'>
+        <header id='cabecalho'>
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+            <figure id="icone">
+                <img src='_imagens/fotos.png' id="foto" />
+                <figcaption>
+                    Google Glass, visão para o futuro.
+                </figcaption>
+            </figure>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmousemove="mudaIcone('_imagens/home.png')" onmouseout="mudaIcone('_imagens/fotos.png')">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/especificacoes.png')"
+                        onmouseout="mudaIcone('_imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmousemove="mudaIcone('_imagens/fotos.png')"><a href="fotos.html">Fotos</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/multimidia.png')" onmouseout="mudaIcone('_imagens/fotos.png')">
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/contato.png')" onmouseout="mudaIcone('_imagens/fotos.png')"><a
+                            href="fale-conosco.html">Fale
+                            conosco</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section id="corpo">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <h3>Glass > Fotos</h3>
+                    <h1>Galeria de Imagens do Google Glass</h1>
+                    <h2>por Gustavo Guanabara</h2>
+                    <h3><span>Atualizado em 01/Maio/2013</span></h3>
+                </header>
+                <P>
+                    Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais
+                    características do Google Glass, como recursos e propriedades que estão impressionando o mundo
+                    inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve
+                    descrição.
+                </P>
+                <ul id="album-fotos">
+                    <li id="foto01" class="foto-galeria"><span>Agenda e lembretes</span></li>
+                    <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+                    <li id="foto03"><span>Leve e compacto</span></li>
+                    <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+                    <li id="foto05"><span>Vários tipos de lente</span></li>
+                    <li id="foto06"><span>Informações importantes</span></li>
+                </ul>
+            </article>
+        </section>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara </br>
+                Facebook | Twitter</p>
+        </footer>
+    </div>
+</body>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
-
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
-
-Copyright 2013 - by Gustavo Guanabara
-
-Facebook | Twitter
+</html>
