--- a/pratica/projeto_google_glass/index.html
+++ b/pratica/projeto_google_glass/index.html
@@ -6,7 +6,9 @@
     <title>Tudo Sobre Google Glass</title>
     <meta name='viewport' content="width = device-width, initial-scale = 1" />
     <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
-
+    <link rel="stylesheet" type="text/css" href="_css/tabela_especificacoes.css" />
+    <link rel="stylesheet" type="text/css" href="_css/menu.css" />
+    <link rel="stylesheet" type="text/css" href="_css/fotos.css" />
 </head>
 <script language="javascript" src="_javascript/funcoes.js">
 </script>
@@ -29,7 +31,7 @@
                 <ul>
                     <li onmousemove="mudaIcone('_imagens/home.png')"
                         onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-                    <li onmousemove="mudaIcone('_imagens/especificacoes-02.png')"
+                    <li onmousemove="mudaIcone('_imagens/especificacoes.png')"
                         onmouseout="mudaIcone('_imagens/glass-oculos-preto-peq.png')"><a
                             href="specs.html">Especificações</a></li>
                     <li onmousemove="mudaIcone('_imagens/fotos.png')"
@@ -130,15 +132,17 @@
                     mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
                 </p>
 
-                [AQUI ENTRA UM VÍDEO]
+                <video id="video-normal" controls="controls" poster="_imagens/video-mini01.jpg">
+                    <source src="_media/one-day.mp4">
+                </video>
             </article>
         </section>
         <aside id="lateral">
             <h1>Outras Notícias</h1>
             <h2>Vídeo mais recente</h2>
 
-            <video>
-
+            <video id="video-lateral" controls="controls" poster="_imagens/video-mini02.jpg">
+                <source src="_media/how-it-feels.mp4">
             </video>
 
             <h2>Novidades no Glass</h2>
@@ -161,5 +165,4 @@
         </footer>
     </div>
 </body>
-
 </html>
