--- a/pratica/projeto_google_glass/multimidia.html
+++ b/pratica/projeto_google_glass/multimidia.html
@@ -1,25 +1,77 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang='pt-br'>
 
-[AQUI ENTRA UMA FOTO]
+<head>
+    <meta charset="utf-8" />
+    <title>Fotos Google Glass</title>
+    <meta name='viewport' content="width = device-width, initial-scale = 1" />
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="_css/menu.css" />
+</head>
+<script language="javascript" src="_javascript/funcoes.js">
+</script>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+    <div id='interface'>
+        <header id='cabecalho'>
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+            <figure id="icone">
+                <img src='_imagens/multimidia.png' id="foto" />
+                <figcaption>
+                    Google Glass, visão para o futuro.
+                </figcaption>
+            </figure>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmousemove="mudaIcone('_imagens/home.png')" onmouseout="mudaIcone('_imagens/multimidia.png')">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/especificacoes.png')"
+                        onmouseout="mudaIcone('_imagens/multimidia.png')">
+                        <a href="specs.html">Especificações</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/fotos.png')" onmouseout="mudaIcone('_imagens/multimidia.png')">
+                        <a href="fotos.html">Fotos</a>
+                    </li>
+                    <li>
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li onmousemove="mudaIcone('_imagens/contato.png')"
+                        onmouseout="mudaIcone('_imagens/multimidia.png')">
+                        <a href="fale-conosco.html">Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section id="corpo">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <h3>Glass > Multimídia</h3>
+                    <h1>Sons e Vídeos</h1>
+                    <h2>por Gustavo Guanabara</h2>
+                    <h3><span>Atualizado em 01/Maio/2013</span></h3>
+                </header>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <h1>Áudio e Vídeo</h1>
+                <div id="tv-radio">
+                    <audio id="music" controls="controls">
+                        <source src="_media/2009-lovers-carvings-bibio.mp3"/>
+                    </audio>
+                    <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
+                        <source src="_media/getting-started.mp4"/>
+                    </video>
+                </div> 
+            </article>
+        </section>
+        <footer id="rodape">
+            <p>Copyright 2013 - by Gustavo Guanabara</br>
+                Facebook | Twitter</p>
+        </footer>
+    </div>
+</body>
 
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
-
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+</html>
